# first

./: CMakeLists.txt
src/: hello.cpp  hello.h
tests/: main.cpp
